Don't show any promo tabs when startup enterprise policies are set.

When RestoreOnStartup is managed it should be the only source of tabs
to be shown to the user on first, second or any other browser start
unless the user is restarting from a crash or starting the browser
with an url on the command line.

BUG=756545
TEST=TBD (let's see which tests will fail on the CQ)

Change-Id: I5da256009d6e254ecb8f0756cf08b2de991c9c26