chrome/browser/ui/startup/startup_browser_creator_impl.cc
@@ -666,19 +666,25 @@ StartupTabs StartupBrowserCreatorImpl::DetermineStartupTabs(
   if (!distribution_tabs.empty())
     return distribution_tabs;
 
-  // This is a launch from a prompt presented to an inactive user who chose to
-  // open Chrome and is being brought to a specific URL for this one launch.
-  // Launch the browser with the desired welcome back URL in the foreground and
-  // the other ordinary URLs (e.g., a restored session) in the background.
-  StartupTabs welcome_back_tabs =
-      provider.GetWelcomeBackTabs(profile_, browser_creator_, process_startup);
-  AppendTabs(welcome_back_tabs, &tabs);
+  StartupTabs onboarding_tabs;
+  // Only do promos if the startup pref is not managed.
+  if (!profile_ ||
+      !StartupBrowserCreator::GetSessionStartupPref(command_line_, profile_)
+           .TypeIsManaged(profile_->GetPrefs())) {
+    // This is a launch from a prompt presented to an inactive user who chose to
+    // open Chrome and is being brought to a specific URL for this one launch.
+    // Launch the browser with the desired welcome back URL in the foreground
+    // and the other ordinary URLs (e.g., a restored session) in the background.
+    StartupTabs welcome_back_tabs = provider.GetWelcomeBackTabs(
+        profile_, browser_creator_, process_startup);
+    AppendTabs(welcome_back_tabs, &tabs);
 
-  // Policies for onboarding (e.g., first run) may show promotional and
-  // introductory content depending on a number of system status factors,
-  // including OS and whether or not this is First Run.
-  StartupTabs onboarding_tabs = provider.GetOnboardingTabs(profile_);
-  AppendTabs(onboarding_tabs, &tabs);
+    // Policies for onboarding (e.g., first run) may show promotional and
+    // introductory content depending on a number of system status factors,
+    // including OS and whether or not this is First Run.
+    onboarding_tabs = provider.GetOnboardingTabs(profile_);
+    AppendTabs(onboarding_tabs, &tabs);
+  }
 
   // If the user has set the preference indicating URLs to show on opening,
   // read and add those.
