chrome/browser/ui/startup/startup_browser_creator_impl_unittest.cc
@@ -100,13 +100,21 @@ TEST(StartupBrowserCreatorImplTest, DetermineStartupTabs) {
                base::CommandLine(base::CommandLine::NO_PROGRAM),
                chrome::startup::IS_FIRST_RUN);
 
-  StartupTabs output =
-      impl.DetermineStartupTabs(provider, StartupTabs(), true, false, false);
+  StartupTabs output = impl.DetermineStartupTabs(provider, StartupTabs(), true,
+                                                 false, false, false);
   ASSERT_EQ(4U, output.size());
   EXPECT_EQ("reset-trigger", output[0].url.host());
   EXPECT_EQ("onboarding", output[1].url.host());
   EXPECT_EQ("prefs", output[2].url.host());
   EXPECT_EQ("pinned", output[3].url.host());
+
+  // No extra onboarding content for managed starts.
+  output = impl.DetermineStartupTabs(provider, StartupTabs(), true, false,
+                                     false, true);
+  ASSERT_EQ(3U, output.size());
+  EXPECT_EQ("reset-trigger", output[0].url.host());
+  EXPECT_EQ("prefs", output[1].url.host());
+  EXPECT_EQ("pinned", output[2].url.host());
 }
 
 // All content is blocked in Incognito mode, or when recovering from a crash.
@@ -120,8 +128,8 @@ TEST(StartupBrowserCreatorImplTest, DetermineStartupTabs_IncognitoOrCrash) {
                chrome::startup::IS_FIRST_RUN);
 
   // Incognito case:
-  StartupTabs output =
-      impl.DetermineStartupTabs(provider, StartupTabs(), true, true, false);
+  StartupTabs output = impl.DetermineStartupTabs(provider, StartupTabs(), true,
+                                                 true, false, false);
   ASSERT_EQ(1U, output.size());
   // Check for the actual NTP URL, rather than the sentinel returned by the
   // fake, because the Provider is ignored entirely when short-circuited by
@@ -129,8 +137,8 @@ TEST(StartupBrowserCreatorImplTest, DetermineStartupTabs_IncognitoOrCrash) {
   EXPECT_EQ(GURL(chrome::kChromeUINewTabURL), output[0].url);
 
   // Crash Recovery case:
-  output =
-      impl.DetermineStartupTabs(provider, StartupTabs(), true, false, true);
+  output = impl.DetermineStartupTabs(provider, StartupTabs(), true, false, true,
+                                     false);
   ASSERT_EQ(1U, output.size());
   EXPECT_EQ(GURL(chrome::kChromeUINewTabURL), output[0].url);
 }
@@ -145,8 +153,8 @@ TEST(StartupBrowserCreatorImplTest, DetermineStartupTabs_MasterPrefs) {
                base::CommandLine(base::CommandLine::NO_PROGRAM),
                chrome::startup::IS_FIRST_RUN);
 
-  StartupTabs output =
-      impl.DetermineStartupTabs(provider, StartupTabs(), true, false, false);
+  StartupTabs output = impl.DetermineStartupTabs(provider, StartupTabs(), true,
+                                                 false, false, false);
   ASSERT_EQ(1U, output.size());
   EXPECT_EQ("distribution", output[0].url.host());
 }
@@ -163,8 +171,8 @@ TEST(StartupBrowserCreatorImplTest, DetermineStartupTabs_CommandLine) {
 
   StartupTabs cmd_line_tabs = {StartupTab(GURL("https://cmd-line"), false)};
 
-  StartupTabs output =
-      impl.DetermineStartupTabs(provider, cmd_line_tabs, true, false, false);
+  StartupTabs output = impl.DetermineStartupTabs(provider, cmd_line_tabs, true,
+                                                 false, false, false);
   ASSERT_EQ(2U, output.size());
   EXPECT_EQ("reset-trigger", output[0].url.host());
   EXPECT_EQ("cmd-line", output[1].url.host());
@@ -173,14 +181,14 @@ TEST(StartupBrowserCreatorImplTest, DetermineStartupTabs_CommandLine) {
   // command line tabs.
 
   // Incognito
-  output =
-      impl.DetermineStartupTabs(provider, cmd_line_tabs, true, true, false);
+  output = impl.DetermineStartupTabs(provider, cmd_line_tabs, true, true, false,
+                                     false);
   ASSERT_EQ(1U, output.size());
   EXPECT_EQ("cmd-line", output[0].url.host());
 
   // Crash Recovery
-  output =
-      impl.DetermineStartupTabs(provider, cmd_line_tabs, true, false, true);
+  output = impl.DetermineStartupTabs(provider, cmd_line_tabs, true, false, true,
+                                     false);
   ASSERT_EQ(1U, output.size());
   EXPECT_EQ("cmd-line", output[0].url.host());
 }
@@ -195,7 +203,7 @@ TEST(StartupBrowserCreatorImplTest, DetermineStartupTabs_NewTabPage) {
                chrome::startup::IS_FIRST_RUN);
 
   StartupTabs output = impl.DetermineStartupTabs(
-      provider_allows_ntp, StartupTabs(), true, false, false);
+      provider_allows_ntp, StartupTabs(), true, false, false, false);
   ASSERT_EQ(3U, output.size());
   EXPECT_EQ("reset-trigger", output[0].url.host());
   EXPECT_EQ("new-tab", output[1].url.host());
@@ -211,7 +219,7 @@ TEST(StartupBrowserCreatorImplTest, DetermineStartupTabs_WelcomeBackPage) {
                chrome::startup::IS_FIRST_RUN);
 
   StartupTabs output = impl.DetermineStartupTabs(
-      provider_allows_ntp, StartupTabs(), true, false, false);
+      provider_allows_ntp, StartupTabs(), true, false, false, false);
   ASSERT_EQ(3U, output.size());
   EXPECT_EQ("welcome-back", output[0].url.host());
   EXPECT_EQ("prefs", output[1].url.host());
@@ -219,7 +227,14 @@ TEST(StartupBrowserCreatorImplTest, DetermineStartupTabs_WelcomeBackPage) {
 
   // No welcome back for non-startup opens.
   output = impl.DetermineStartupTabs(provider_allows_ntp, StartupTabs(), false,
-                                     false, false);
+                                     false, false, false);
+  ASSERT_EQ(2U, output.size());
+  EXPECT_EQ("prefs", output[0].url.host());
+  EXPECT_EQ("pinned", output[1].url.host());
+
+  // No welcome back for managed starts even if first run.
+  output = impl.DetermineStartupTabs(provider_allows_ntp, StartupTabs(), true,
+                                     false, false, true);
   ASSERT_EQ(2U, output.size());
   EXPECT_EQ("prefs", output[0].url.host());
   EXPECT_EQ("pinned", output[1].url.host());
